[package]
name = "loaded_dice"
version = "0.1.1"
authors = ["coco <coco@hexgolems.com>"]
description = "A simple sampler for loaded dices, implementing the alias method"
repository = "https://github.com/eqv/loaded_dice"
keywords = ["random", "rng", "alias","loaded_dice", "probability"]

license-file = "LICENSE"

[dependencies]
rand = "0.3.*"

[[bin]]
name = "example"
path = "src/example.rs"
