[package]
name = "loaded_dice"
version = "0.2.1"
authors = ["coco <coco@hexgolems.com>"]
description = "A simple sampler for loaded dices, implementing the alias method"
repository = "https://github.com/eqv/loaded_dice"
keywords = ["random", "rng", "alias", "loaded_dice", "probability"]
edition = "2021"

license-file = "LICENSE"

[features]
std = ["rand/std", "rand/std_rng"]

[dependencies]
rand = { version = "0.8", default-features = false }

[[example]]
name = "example"
path = "src/example.rs"
